--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.89.0",
+    "terser": "^5.43.1",
     "vite": "^6.3.5"
   },
   "dependencies": {
